cinnamon-settings-daemon (2.2.1-1) experimental; urgency=low

  [ Maximiliano Curia ]
  * Initial release (Closes: #745915).
  * Add autopkgtests.
  * Update install files.

  [ Margarita Manterola ]
  * Remove control.in and gnome sequence in debian/rules.
  * New upstream release 2.2.1.
  * Add myself to uploaders.
  * Fix desktop file installation
  * Fix /etc/dbus-1 file installation
  * Use upstream manpage

 -- Margarita Manterola <marga@debian.org>  Mon, 28 Apr 2014 22:27:16 +0200